# Fastapi-Simple-template

./: README.md  config.py  main.py  pyproject.toml
app/: __init__.py
app/api/: deps.py
app/middleware/: __init__.py  error_handler.py
migrations/: README  env.py
models/: __init__.py  base.py
tests/: conftest.py  test_news.py
utils/: utils.py
